--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -10,6 +10,6 @@ jobs:
         with:
           go-version: '1.25'
       - name: Build application
-        run: go build -v -o diployable-api ./...
+        run: go build -v -o diployable-api ./cmd/main.go
       - name: Run tests
         run: go test -v ./...
