--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
 
+API_PORT=8080
+ENCRYPT_COST=
+
 GOOSE_DRIVER=postgres
 GOOSE_DBSTRING=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@database/${POSTGRES_DB}
 GOOSE_MIGRATION_DIR=./.database/migrations
